--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: CodnGanna Command Blog
+title: CodingAnna Blog
 description: A blog for tutorials and Scripts related to  my videos
 baseurl: ""
 url: "https://codnganna.xyz"
