--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: CodingAnna Blog
 description: A blog for tutorials and Scripts related to  my videos
 baseurl: ""
-url: "https://codnganna.xyz"
+url: "https://codinganna.xyz"
 markdown: kramdown
 permalink: /:year/:month/:day/:title
 plugins:
